--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "request": "attach",
       "connect": { "host": "localhost", "port": 10020 },
       "pathMappings": [
-        { "localRoot": "${workspaceFolder}", "remoteRoot": "/app/usr/src" }
+        { "localRoot": "${workspaceFolder}", "remoteRoot": "/usr/src/app" }
       ]
     }
   ]
