--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,4 +18,7 @@ services:
       - APP_VERSION=0.1.0
       - APP_TITLE=Exchange Rate API
       - APP_DESCRIPTION=Exchange rate API
+      - FIXER_API=http://data.fixer.io/api/latest
       - FIXER_API_KEY=f9aff0ccbc4b5bc563017d44b88928d1
+      - BANXICO_API=https://www.banxico.org.mx/SieAPIRest/service/v1/series/SF43718/datos
+      - BANXICO_TOKEN=700bd6f4d875c0f527001edb1737db29caff831b0b8e25b3e5baa77f83f19e1c
