--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - APP_DESCRIPTION=Exchange rate API
       - DATABASE_HOST=exchange-db
       - DATABASE_NAME=exchange_db_dev
+      - DATABASE_TEST_NAME=exchange_db_test
       - DATABASE_USER=postgres
       - DATABASE_PASSWORD=postgres
       - OFFICIAL_RATE_SITE=https://www.banxico.org.mx/tipcamb/tipCamMIAction.do
