unit test for exchange service

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ uvicorn = "*"
 bs4 = "*"
 tortoise-orm = "*"
 asyncpg = "*"
+pytest = "*"
+requests = "*"
+pytest-cov = "*"
 
 [dev-packages]
 debugpy = "*"
