--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: ..
       dockerfile: docker/Dockerfile
-    command: python -m pytest --cov=".."
+    command: python -m pytest --cov=".. -v -s"
     volumes:
       - ../:/usr/src/app/
     environment:
@@ -27,3 +27,10 @@ services:
       - BANXICO_API=https://www.banxico.org.mx/SieAPIRest/service/v1/series/SF43718/datos
       - BANXICO_TOKEN=700bd6f4d875c0f527001edb1737db29caff831b0b8e25b3e5baa77f83f19e1c
       - RATE_LIMIT_PER_USER=10
+    networks:
+      - exchange
+
+
+networks:
+  exchange:
+   external: true
