--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ asyncpg = "*"
 pytest = "*"
 requests = "*"
 pytest-cov = "*"
+python-jose = {extras = ["cryptography"], version = "*"}
+passlib = {extras = ["bcrypt"], version = "*"}
+python-multipart = "*"
 
 [dev-packages]
 debugpy = "*"
