--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - 4000:80
       - 10020:10000
     environment:
-      - DEBUGGER=False
+      - DEBUGGER=True
       - ENVIRONMENT=dev
       - APP_VERSION=0.1.0
       - APP_TITLE=Exchange Rate API
@@ -28,7 +28,7 @@ services:
       - FIXER_API_KEY=f9aff0ccbc4b5bc563017d44b88928d1
       - BANXICO_API=https://www.banxico.org.mx/SieAPIRest/service/v1/series/SF43718/datos
       - BANXICO_TOKEN=700bd6f4d875c0f527001edb1737db29caff831b0b8e25b3e5baa77f83f19e1c
-      - RATE_LIMIT_PER_USER=10
+      - RATE_LIMIT_PER_USER=17
       - SECRET_KEY=example_key
       - ALGORITHM=HS256
     networks:
